--- a/app/components/header/header.module.scss
+++ b/app/components/header/header.module.scss
@@ -43,7 +43,7 @@
 					width: 30px;
 
 					&:hover {
-						border-bottom: solid 4px #9adcff;
+						border-bottom: solid 4px var(--unknown1);
 						transition: 200ms;
 					}
 				}
@@ -75,7 +75,7 @@
 				margin: -53px 0 0 -60px;
 				padding: 30px 50px 20px 50px;
 				border-radius: 0 0 0 20px;
-				box-shadow: 0 0 7px 5px rgba(0, 0, 0, 0.36);
+				box-shadow: 0 0 7px 5px var(--shadow);
 
 				background: var(--bg-color);
 				list-style-type: none;
@@ -141,7 +141,7 @@
 		color: var(--bg-color) !important;
 
 		&:hover {
-			border-bottom: solid 4px #ff8aae;
+			border-bottom: solid 4px var(--unknown2);
 		}
 	}
 }
