--- a/app/index/index.module.scss
+++ b/app/index/index.module.scss
@@ -8,7 +8,7 @@
 }
 
 .grid {
-	background-color: #353535;
+	background-color: var(--btn-color);
 	border-radius: 20px;
 	display: grid;
 	gap: 1.5rem;
