--- a/styles/style.scss
+++ b/styles/style.scss
@@ -6,12 +6,22 @@
 		--text-color: #fff;
 		--btn-color: #353535;
 		--btn-2-color: #eee;
+		--unknown1: #9adcff;
+		--unknown2: #ff8aae;
+		--unknown3: #c2c2c2;
+		--unknown4: #e0e0e0;
+		--shadow: #0000005c;
 	}
 	@include mixins.light-theme {
 		--bg-color: #ffffff;
 		--text-color: #000;
 		--btn-color: #e3e3e3;
 		--btn-2-color: #222;
+		--unknown1: #9adcff;
+		--unknown2: #ff8aae;
+		--unknown3: #c2c2c2;
+		--unknown4: #e0e0e0;
+		--shadow: #0000005c;
 	}
 
 	--left-right-padding: 5%;
