--- a/styles/style.scss
+++ b/styles/style.scss
@@ -38,6 +38,7 @@ body {
 	display: flex;
 	flex-direction: column;
 	min-height: 100vh;
+	overflow-x: hidden;
 
 	> *:not(main),
 	> main div[data-nextjs-scroll-focus-boundary=""] > *:not(h1) {
