--- a/app/components/header/header.module.scss
+++ b/app/components/header/header.module.scss
@@ -8,13 +8,13 @@
 	height: 60px;
 	justify-content: space-between;
 	text-align: center;
-	z-index: 1;
 
 	> a {
 		color: var(--text-color);
 		font-weight: 800;
 		font-size: 23px;
 		text-transform: uppercase;
+		z-index: 5;
 	}
 
 	> nav {
@@ -50,32 +50,66 @@
 			}
 		}
 		> button {
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			flex-direction: column;
+
 			background: none;
 			border: none;
 			padding: 0;
 			cursor: pointer;
+
+			z-index: 5;
+
+			span {
+				background-color: var(--text-color);
+				border-radius: 3px;
+				display: block;
+				height: 5px;
+				margin: 4px 0;
+				width: 40px;
+				align-self: flex-end;
+
+				transition: all 0.3s ease-in-out;
+			}
+
 			@include mixins.desktop {
 				display: none;
 			}
 		}
 	}
 
+	nav.open {
+		> button {
+			> span {
+				&:first-child {
+					transform: translateY(13px) rotate(-45deg);
+				}
+				&:nth-child(2) {
+					width: 0;
+				}
+				&:last-child {
+					transform: translateY(-13px) rotate(45deg);
+				}
+			}
+		}
+		> ul {
+			transform: translate(0%, 0);
+		}
+	}
+
 	@include mixins.mobile {
 		> nav {
-			display: block;
-			position: relative;
-			top: 6px;
-			left: 50px;
-
-			z-index: 1;
-
 			> ul {
+				z-index: 1;
+
+				width: 100%;
+				height: 100vh;
 				position: absolute;
-				width: 400px;
-				margin: -53px 0 0 -60px;
-				padding: 30px 50px 20px 50px;
-				border-radius: 0 0 0 20px;
-				box-shadow: 0 0 7px 5px var(--shadow);
+
+				top: 0;
+				left: 0;
 
 				background: var(--bg-color);
 				list-style-type: none;
@@ -87,52 +121,23 @@
 
 				transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
 
+				flex-direction: column;
+				gap: 30px;
+
 				> li {
 					display: flex;
-					height: 50px;
-					text-align: center;
-					justify-content: center;
 					align-items: center;
-					font-size: 23px;
-					margin: 20px 0;
-					border-width: 5px !important;
+					justify-content: space-between;
 
+					width: 50%;
 					> a {
 						display: block;
 						width: 100%;
-						height: 100%;
 					}
-				}
-			}
-
-			> span {
-				width: 50px;
-				height: 5px;
-				background-color: var(--btn-2-color) !important;
-				display: block;
-				margin: 8px auto;
-				transition: all 0.3s ease-in-out;
-				z-index: 5;
-			}
-			> .finished {
-				&:nth-child(1) {
-					transform: translateY(13px) rotate(-45deg);
-				}
-
-				&:nth-child(2) {
-					width: 0;
-				}
-
-				&:nth-child(3) {
-					transform: translateY(-13px) rotate(45deg);
 				}
 			}
 		}
 	}
-}
-
-.open {
-	background-color: red;
 }
 
 .currentPg {
