--- a/styles/style.scss
+++ b/styles/style.scss
@@ -31,6 +31,11 @@ a {
 	text-decoration: none;
 }
 
+html,
+body {
+	overflow-x: hidden;
+}
+
 body {
 	margin: 0;
 	background: var(--bg-color);
@@ -38,7 +43,6 @@ body {
 	display: flex;
 	flex-direction: column;
 	min-height: 100vh;
-	overflow-x: hidden;
 
 	> *:not(main),
 	> main div[data-nextjs-scroll-focus-boundary=""] > *:not(h1) {
