--- a/styles/style.scss
+++ b/styles/style.scss
@@ -39,8 +39,8 @@ body {
 	flex-direction: column;
 	min-height: 100vh;
 
-	> *:not(main),
-	> main div[data-nextjs-scroll-focus-boundary=""] > *:not(h1) {
+	> div > *:not(main),
+	> div > main div[data-nextjs-scroll-focus-boundary=""] > *:not(h1) {
 		padding: 0 var(--left-right-padding);
 	}
 
