Fixed mobile issues

--- a/app/components/banners/banner/banner.module.scss
+++ b/app/components/banners/banner/banner.module.scss
@@ -5,7 +5,7 @@
 
 	font-size: 1.2em;
 	text-align: center;
-	padding-block: 10px;
+	padding-block: 10px !important;
 	color: var(--bg-color);
 	background-color: var(--btn-2-color);
 
@@ -14,10 +14,13 @@
 	}
 
 	button {
-		width: 25px;
+		width: min-content;
 		background: none;
 		border: none;
 		cursor: pointer;
+		padding: 0;
+
+		height: 100%;
 	}
 }
 
