--- a/app/components/header/header.module.scss
+++ b/app/components/header/header.module.scss
@@ -106,7 +106,8 @@
 				z-index: 1;
 
 				width: 100%;
-				height: 100vh;
+				height: 120vh;
+				padding-top: 20%;
 				position: absolute;
 
 				top: 0;
@@ -123,6 +124,7 @@
 				transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
 
 				flex-direction: column;
+				justify-content: flex-start;
 				gap: 30px;
 
 				> li {
