Fixed Discord message's padding

--- a/app/join/discord/discord.module.scss
+++ b/app/join/discord/discord.module.scss
@@ -5,10 +5,10 @@
 	display: flex;
 	flex-direction: column;
 	gap: 20px;
-	padding: 7px;
 }
 
 .discMessageContainer {
+	margin: 7px;
 	align-items: center;
 	background-color: #40444b;
 	border-radius: 7px;
