--- a/app/map/map.module.scss
+++ b/app/map/map.module.scss
@@ -1,3 +1,5 @@
+@use "../../styles/mixins.scss" as mixins;
+
 .mapFrame {
 	border: 1px solid #000;
 	height: calc(100% - 2px);
@@ -7,5 +9,26 @@
 .loading {
 	> h1 {
 		text-transform: uppercase;
+	}
+}
+
+.tempWarning {
+	padding: 40px;
+	margin: 40px;
+
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+
+	text-align: center;
+
+	> h1 {
+		text-transform: uppercase;
+	}
+
+	> a {
+		@include mixins.button;
+		margin-top: 30px;
 	}
 }
