Profile mobile support

--- a/app/components/header/profile-button/profile-button.module.scss
+++ b/app/components/header/profile-button/profile-button.module.scss
@@ -1,12 +1,23 @@
+@use "/styles/mixins.scss";
+
 .profileImg {
 	border-radius: 50%;
 	margin-top: 4px;
 	cursor: pointer;
+
+	@include mixins.mobile {
+		display: none;
+	}
 }
 
 .loginButton {
-	margin-left: 20px;
-	font-weight: 600;
-	text-transform: uppercase;
 	cursor: pointer;
+}
+
+.profileButton {
+	display: none;
+
+	@include mixins.mobile {
+		display: block;
+	}
 }
