Added dropdown menu

--- a/app/components/header/header.module.scss
+++ b/app/components/header/header.module.scss
@@ -8,7 +8,7 @@
 	height: 60px;
 	justify-content: space-between;
 	text-align: center;
-	overflow: hidden;
+	position: relative;
 
 	> a {
 		color: var(--text-color);
