--- a/app/components/header/profile-button/profile-button.module.scss
+++ b/app/components/header/profile-button/profile-button.module.scss
@@ -21,3 +21,38 @@
 		display: block;
 	}
 }
+
+.dropdown {
+	position: absolute;
+	top: 100%;
+	right: 5%;
+
+	padding: 20px;
+	border-radius: 10px;
+	box-shadow: 0 0 15px 0 black;
+
+	background-color: var(--btn-color);
+
+	> ul {
+		list-style: none;
+		padding: 0;
+		margin: 0;
+
+		display: grid;
+		gap: 10px;
+
+		> li {
+			list-style-type: none;
+			margin: 0;
+			padding: 0;
+		}
+	}
+}
+
+.button {
+	@include mixins.button;
+	text-transform: uppercase;
+	padding-inline: 20px;
+
+	cursor: pointer;
+}
