--- a/styles/mixins.scss
+++ b/styles/mixins.scss
@@ -26,7 +26,7 @@ $rounded-radius: 10px;
 }
 
 @mixin title {
-  color: black;
+  color: var(--bg-color);
   font-size: 3.2em;
   font-weight: 800;
 
