--- a/pages/join/join.module.scss
+++ b/pages/join/join.module.scss
@@ -28,8 +28,6 @@
     line-height: 1.25rem;
     text-align: justify;
   }
-  > span {
-  }
 
   > *:not(:last-child) {
     margin: 0;
@@ -45,7 +43,7 @@
 }
 
 .largeButton {
-  @include mixins.button;
+  @include mixins.block-button;
 }
 
 .grid {
@@ -53,16 +51,13 @@
   display: grid;
   gap: 1.5rem;
   margin: 30px 0 0 0;
+
   @include mixins.desktop {
     grid-template-columns: 2fr 1fr;
-    grid-auto-flow: row;
   }
 }
 
 .discordEmbed {
-  grid-row-start: 1;
-  grid-row-end: 4;
-  grid-column-start: 2;
   height: 100%;
   width: 100%;
   border-radius: 10px;
