--- a/styles/mixins.scss
+++ b/styles/mixins.scss
@@ -63,3 +63,14 @@ $rounded-radius: 10px;
     }
   }
 }
+
+@mixin block-button {
+  background: var(--bg-color) !important;
+  border-radius: 10px;
+  color: var(--text-color) !important;
+  display: block;
+  font-size: 1.3rem;
+  font-weight: 600;
+  padding: 10px;
+  text-align: center;
+}
