--- a/components/header/header.module.scss
+++ b/components/header/header.module.scss
@@ -44,7 +44,7 @@
           width: 30px;
 
           &:hover {
-            border-bottom: solid 4px var(--unknown1);
+            border-bottom: solid 4px var(--nav-safe);
             transition: 200ms;
           }
         }
@@ -153,7 +153,7 @@
     color: var(--bg-color) !important;
 
     &:hover {
-      border-bottom: solid 4px #d36868 !important;
+      border-bottom: solid 4px var(--nav-danger) !important;
     }
   }
 }
