--- a/pages/about/about.module.scss
+++ b/pages/about/about.module.scss
@@ -1,45 +1,26 @@
-@use "../../styles/mixins.scss" as mixins;
+@use '../../styles/mixins.scss' as mixins;
 
 .title {
-	@include mixins.title;
+  @include mixins.title;
 }
 
 .subHeader {
-	align-items: center;
-	background-color: var(--btn-color);
-	border-radius: 10px;
-	color: var(--text-color);
-	display: flex;
-	flex-direction: column;
-	margin: 20px 0;
-	padding: 20px;
-	text-align: center;
-	> h2 {
-		text-transform: uppercase;
-	}
-	> * {
-		margin: 0;
-	}
-}
-
-.subHeaderLink {
-	color: var(--text-color);
-	text-decoration: underline;
+  @include mixins.information-block;
 }
 
 .faq {
-	display: grid;
-	padding: 20px;
-	gap: 1.5rem;
-	background-color: var(--btn-color);
-	border-radius: 10px;
-	color: black;
-	@include mixins.desktop {
-		grid-template-columns: 1fr 1fr;
-	}
+  display: grid;
+  padding: 20px;
+  gap: 1.5rem;
+  background-color: var(--btn-color);
+  border-radius: 10px;
+  color: black;
+  @include mixins.desktop {
+    grid-template-columns: 1fr 1fr;
+  }
 }
 
 .blockLink {
-	color: #000;
-	text-decoration: underline;
+  color: #000;
+  text-decoration: underline;
 }
