--- a/styles/style.scss
+++ b/styles/style.scss
@@ -6,10 +6,9 @@
     --text-color: #fff;
     --btn-color: #353535;
     --btn-2-color: #eee;
-    --unknown1: #9adcff;
-    --unknown2: #ff8aae;
-    --unknown3: #c2c2c2;
-    --unknown4: #e0e0e0;
+    --nav-safe: #9adcff;
+    --nav-danger: #ff8aae;
+    --light-gray: #c0bfbf;
     --shadow: #0000005c;
   }
   @include mixins.light-theme {
@@ -17,23 +16,13 @@
     // --text-color: #000;
     // --btn-color: #e3e3e3;
     // --btn-2-color: #222;
-    // --unknown1: #9adcff;
-    // --unknown2: #ff8aae;
+    // --nav-safe: #9adcff;
+    // --nav-danger: #9adcff;
     // --unknown3: #c2c2c2;
     // --unknown4: #e0e0e0;
     // --shadow: #0000005c;
 
     // Dark mode to temp remove light-mode:
-
-    --bg-color: #202020;
-    --text-color: #fff;
-    --btn-color: #353535;
-    --btn-2-color: #eee;
-    --unknown1: #9adcff;
-    --unknown2: #ff8aae;
-    --unknown3: #c2c2c2;
-    --unknown4: #e0e0e0;
-    --shadow: #0000005c;
   }
 
   --left-right-padding: 5%;
@@ -65,6 +54,14 @@ a {
 
 body {
   margin: 0;
+}
+
+button {
+  font: inherit;
+}
+
+a {
+  color: var(--text-color);
 }
 
 .purple {
