Removed light mode again

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -23,6 +23,15 @@
     // --shadow: #0000005c;
 
     // Dark mode to temp remove light-mode:
+
+    --bg-color: #202020;
+    --text-color: #fff;
+    --btn-color: #353535;
+    --btn-2-color: #eee;
+    --nav-safe: #9adcff;
+    --nav-danger: #ff8aae;
+    --light-gray: #c0bfbf;
+    --shadow: #0000005c;
   }
 
   --left-right-padding: 5%;
