--- a/pages/map/map.module.scss
+++ b/pages/map/map.module.scss
@@ -1,30 +1,6 @@
 @use '../../styles/mixins.scss' as mixins;
 
-.mapWrapper {
-  padding-inline: calc(var(--left-right-padding) * -1);
-  width: 100%;
-  height: calc(100vh - 120px);
-  padding: 0;
-  margin: 0;
-
-  margin-bottom: -50px;
-
-  display: flex;
-}
-
-.mapFrame {
-  border: 1px solid #000;
-  width: 100%;
-  flex-grow: 1;
-}
-
-.loading {
-  > h1 {
-    text-transform: uppercase;
-  }
-}
-
-.tempWarning {
+.container {
   padding: 40px;
   margin: 40px;
 
@@ -39,7 +15,10 @@
     text-transform: uppercase;
   }
 
-  > a {
+  > .button {
+    outline: none;
+    cursor: pointer;
+    border: none;
     @include mixins.button;
     margin-top: 30px;
   }
