--- a/components/header/header.module.scss
+++ b/components/header/header.module.scss
@@ -30,7 +30,7 @@
       gap: 10px;
       list-style-type: none;
       margin: 0;
-      padding-inline-start: 0;
+      padding: 0;
       > li {
         display: inline;
         > a {
@@ -38,10 +38,18 @@
           border-radius: 6px;
           color: var(--text-color);
           font-size: 16px;
+          padding-block: 5px;
           font-weight: 600;
-          padding: 5px 10px 5px 10px;
           text-transform: uppercase;
           width: 30px;
+
+          @include mixins.desktop {
+            padding-inline: 10px;
+          }
+
+          @include mixins.mobile {
+            padding-block: 2vh;
+          }
 
           &:hover {
             border-bottom: solid 4px var(--nav-safe);
@@ -96,7 +104,7 @@
       }
     }
     > ul {
-      transform: translate(0%, 0);
+      left: 0;
     }
   }
 
@@ -106,25 +114,24 @@
         z-index: 1;
 
         width: 100%;
-        height: 120vh;
-        padding-top: 20%;
+        height: 100vh;
+        height: 100dvh;
         position: absolute;
 
+        box-sizing: border-box;
+
         top: 0;
-        left: 0;
+        left: 100%;
 
         background: var(--bg-color);
         list-style-type: none;
         -webkit-font-smoothing: antialiased;
         /* to stop flickering of text in safari */
 
-        transform-origin: 0% 0%;
-        transform: translate(100%, 0);
-
-        transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
+        transition: left 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
 
         flex-direction: column;
-        justify-content: flex-start;
+        justify-content: center;
         gap: 30px;
 
         > li {
@@ -132,7 +139,8 @@
           align-items: center;
           justify-content: space-between;
 
-          width: 50%;
+          width: 90%;
+          max-width: 30rem;
           > a {
             display: block;
             width: 100%;
