--- a/pages/account/apply/apply.module.scss
+++ b/pages/account/apply/apply.module.scss
@@ -1,11 +1,11 @@
 @use '/styles/mixins.scss' as mixins;
 
 .wrapper {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-
   margin-top: 2rem;
+}
+
+.header {
+  @include mixins.title;
 }
 
 .button {
