--- a/pages/auth/signin/signin.module.scss
+++ b/pages/auth/signin/signin.module.scss
@@ -37,6 +37,7 @@
   font-size: 2rem;
   gap: 1rem;
   text-align: center;
+  padding-inline: 1rem;
 
   @include mixins.mobile {
     flex-direction: column;
