--- a/components/fragments/blocks/blocks.module.scss
+++ b/components/fragments/blocks/blocks.module.scss
@@ -17,6 +17,14 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
+
+  & button {
+    @include mixins.block-button;
+
+    @include mixins.mobile {
+      width: 100%;
+    }
+  }
 }
 
 .title {
@@ -79,12 +87,32 @@
       margin-bottom: 0;
     }
   }
+}
 
-  & button {
-    @include mixins.block-button;
-
-    @include mixins.mobile {
-      width: 100%;
-    }
+.checkboxWrapper {
+  & > input {
+    accent-color: var(--bg-color);
   }
+}
+
+.minecraftSkinWrapper {
+  position: relative;
+  width: 100%;
+
+  > input {
+    width: 100%;
+    padding-left: 48px;
+  }
+}
+
+.minecraftSkin {
+  position: absolute;
+  background-color: var(--btn-color);
+  width: 35px;
+  height: 35px;
+  border-radius: 3px;
+
+  left: 7px;
+  top: 50%;
+  transform: translateY(-50%);
 }
