--- a/components/fragments/blocks/blocks.module.scss
+++ b/components/fragments/blocks/blocks.module.scss
@@ -116,3 +116,12 @@
   top: 50%;
   transform: translateY(-50%);
 }
+
+.submitWrapper {
+  flex-direction: row;
+  align-items: center;
+
+  & > *:last-child {
+    margin-left: auto;
+  }
+}
