--- a/components/fragments/checkboxes/checkboxes.module.scss
+++ b/components/fragments/checkboxes/checkboxes.module.scss
@@ -1,3 +1,35 @@
 .wrapper {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 1rem;
+}
+
+.checkboxesWrapper {
   display: flex;
+  gap: 0.5rem;
+  align-items: center;
+}
+
+.checkboxWrapper {
+  position: relative;
+  height: 45px;
+
+  > input {
+    margin: 0;
+
+    z-index: 0;
+    position: absolute;
+    inset: 0;
+    opacity: 0;
+
+    width: 100%;
+    height: 100%;
+
+    cursor: pointer;
+  }
+
+  > svg {
+    min-height: min-content;
+    font-size: 3rem;
+  }
 }
