--- a/components/layout/header/profile/profile.module.scss
+++ b/components/layout/header/profile/profile.module.scss
@@ -66,3 +66,28 @@
 
   cursor: pointer;
 }
+
+.loading {
+  width: 30px;
+  height: 30px;
+
+  position: relative;
+  animation: rotation 1000s infinite;
+
+  > .colors {
+    inset: 0;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+  }
+}
+
+@keyframes rotation {
+  0% {
+    transform: rotate(0turn);
+  }
+
+  100% {
+    transform: rotate(360turn);
+  }
+}
