--- a/components/layout/header/profile/profile.module.scss
+++ b/components/layout/header/profile/profile.module.scss
@@ -1,5 +1,10 @@
 @use '/styles/mixins.scss';
 
+.profileIcon {
+  background-color: transparent;
+  border: none;
+}
+
 .profileImg {
   border-radius: 50%;
   margin-top: 4px;
