--- a/styles/mixins.scss
+++ b/styles/mixins.scss
@@ -13,6 +13,12 @@ $rounded-radius: 10px;
   }
 }
 
+@mixin prefers-reduced-motion {
+  @media (prefers-reduced-motion) {
+    @content;
+  }
+}
+
 @mixin light-theme {
   @media (prefers-color-scheme: light) {
     @content;
