--- a/styles/style.scss
+++ b/styles/style.scss
@@ -7,6 +7,43 @@
 }
 
 :root {
+  /* Firefox */
+  * {
+    scrollbar-width: thin;
+    scrollbar-color: #b4b4b4 #4b4e4f;
+  }
+
+  /* Chrome, Edge and Safari */
+  *::-webkit-scrollbar {
+    width: 10px;
+    width: 10px;
+  }
+  *::-webkit-scrollbar-track {
+    border-radius: 0px;
+    background-color: #4b4e4f;
+  }
+
+  *::-webkit-scrollbar-track:hover {
+    background-color: #202020;
+  }
+
+  *::-webkit-scrollbar-track:active {
+    background-color: #202020;
+  }
+
+  *::-webkit-scrollbar-thumb {
+    border-radius: 20px;
+    background-color: #b4b4b4;
+  }
+
+  *::-webkit-scrollbar-thumb:hover {
+    background-color: #e1e1e1;
+  }
+
+  *::-webkit-scrollbar-thumb:active {
+    background-color: #e1e1e1;
+  }
+
   scroll-behavior: smooth;
 
   @include mixins.prefers-reduced-motion {
