Added ability to delete user account.

--- a/components/fragments/checkboxes/checkboxes.module.scss
+++ b/components/fragments/checkboxes/checkboxes.module.scss
@@ -21,6 +21,10 @@
   display: flex;
   gap: 0.5rem;
   align-items: center;
+
+  .link {
+    text-decoration: underline;
+  }
 }
 
 .checkboxWrapper {
