--- a/components/fragments/application/application.module.scss
+++ b/components/fragments/application/application.module.scss
@@ -127,6 +127,17 @@
   opacity: 1;
 }
 
+.deniedReason {
+  background-color: var(--bg-color);
+  border-radius: 10px;
+  display: block;
+  width: 100%;
+  padding: 1rem;
+  font-size: 1.2rem;
+
+  text-align: center;
+}
+
 .skeletonWrapper {
   display: flex;
   flex-direction: column;
